--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^3.1.18
   flutter_native_splash: ^2.2.3+1
   provider: ^4.0.2
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +32,7 @@ flutter:
   assets:
     - res/images/
     - res/fonts/
+    - res/anim/
 
   fonts:
     - family: Abel
