--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.18.0
   cloud_firestore: ^3.1.18
+  firebase_auth: ^3.3.20
+  firebase_crashlytics: ^2.8.2
+
   flutter_native_splash: ^2.2.3+1
   provider: ^4.0.2
   lottie: ^1.3.0
+  shared_preferences: ^2.0.15
+  injector: ^2.0.0
 
 dev_dependencies:
   flutter_test:
