--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,17 +19,22 @@ dependencies:
   firebase_crashlytics: ^2.8.2
 
   flutter_native_splash: ^2.2.3+1
-  provider: ^4.0.2
+  provider: ^5.0.0-nullsafety.1
   lottie: ^1.3.0
   shared_preferences: ^2.0.15
   injector: ^2.0.0
+  copy_with_extension: ^4.0.2
+  geolocator: ^9.0.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.1.7
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.9.3
+  copy_with_extension_gen: ^4.0.2
 
 flutter:
 
